# GrantsAPI

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml  settings.py
alembic/: env.py
alembic/versions/: c7f30a2e557a_simplied_relationships.py
api/: api.py  dependencies.py
api/routes/: auth.py  grants.py  users.py
core/models/: app_models.py
core/repository/: ApplicationRepository.py  GrantRepository.py  OrganisationRepository.py  UserRepository.py
data/: grants.db
database/: SeedDB.py  db.py  models.py
docs/: DevNotes.md  initial_db.sql
tests/: app_tests.py
